<resources>
    <string name="app_name">AstroWeather</string>
    <string name="data_refreshing_frequency">Data refreshing frequency</string>
    <string name="latitude">Latitude</string>
    <string name="absolute_location">Absolute location</string>
    <string name="save">Save</string>
    <string name="longitude">longitude</string>
    <string name="search_hint">Type a city name...</string>
    <string name="units_for_data_displaying">Units for data displaying</string>
</resources>
