<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/absolutelocation"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:text="@string/absolute_location"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/latitudetext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:imeOptions="flagNoExtractUi"
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/datarefreshingfrequency"
        app:layout_constraintEnd_toStartOf="@+id/longitude"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/datarefreshingfrequency"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:text="@string/data_refreshing_frequency"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <EditText
        android:imeOptions="flagNoExtractUi"
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/datarefreshingfrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/latitude" />

    <TextView
        android:id="@+id/latitudetext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintBottom_toTopOf="@+id/latitude"
        app:layout_constraintEnd_toStartOf="@+id/longitudetext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/longitudetext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        app:layout_constraintBottom_toTopOf="@+id/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/latitudetext" />

    <Button
        android:id="@+id/saveOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.astroweather.CustomSpinner
        android:id="@+id/frequency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/saveOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datarefreshingfrequency"
        app:layout_constraintVertical_bias="0.035" />
</android.support.constraint.ConstraintLayout>